# SpiderBot

./: .gitignore  CMakeLists.txt  Makefile  README.md  spider_bot.ino  spider_bot.ino.bkp
arduino/spider_bot/: globals.h  mleg.h  mservo.h  test_runs.h
include/: alg_setup.h  algorithm.h  body.h  debuggable.h  global.h  leg.h  mleg.h  mservo.h  servo.h  test_runs.h  vec.h
include/PCA/: Constants.h  I2CPeripheral.h  PCA9685.h
include/algorithms/: alg_joystick.h  alg_setup.h  alg_walk.h  alg_xyz.h  basealgorithm.h
includes/: debuggable.h  globals.h  mleg.h  mservo.h  test_runs.h
src/: body.cpp  global.cpp  leg.cpp  main.cpp  mleg.cpp  mservo.cpp  servo.cpp
src/PCA/: I2CPeripheral.cpp  I2CPeripheral_local.cpp  PCA9685.cpp
